<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navi_sim</name>
  <version>0.0.0</version>
  <description>Simulation tools for martime robotx challenge</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>image_geometry</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>quaternion_operation</depend>
  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>wamv_description</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz2</depend>
  <depend>ament_cmake_auto</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>vision_msgs</depend>
  <depend>embree</depend>
  <depend>color_names</depend>
  <depend>yaml-cpp</depend>
  <depend>util-linux</depend>
  <depend>robotx_behavior_msgs</depend>
  <depend>perception_msgs</depend>

  <exec_depend>rosbag2</exec_depend>
  <exec_depend>perception_bringup</exec_depend>
  <exec_depend>robotx_planner_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
